# handler/deleteOpening.go
@@ -11,14 +11,14 @@ import (
 // @BaseParh /api/v1
 
 // @Summary Delete Opening
-// @Description Delete job opening
+// @Description Delete a job opening
 // @Tags Opening
 // @Accept json
 // @Producer json
 // @Param id query string true "Opening identification"
 // @Success 200 {object} DeleteOpeningResponse
 // @Failure 400 {object} ErrorResponse
-// @Failure 500 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
 // @Router /opening [delete]
 func DeleteOpeningHandler(ctx *gin.Context) {
 	id := ctx.Query("id")
